--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/viewed_products.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/viewed_products.html.twig
@@ -27,7 +27,7 @@
   <div class="card customer-viewed-products-card">
     <h3 class="card-header">
       <i class="material-icons">remove_red_eye</i>
-      {{ 'Viewed products'|trans({}, 'Admin.Orderscustomers.Feature') }}
+      {{ 'Products in carts'|trans({}, 'Admin.Orderscustomers.Feature') }}
       <span class="badge badge-primary rounded">{{ customerViewedProductGrid.data.records_total }}</span>
     </h3>
     <div class="card-body">
