--- a/admin-dev/themes/new-theme/scss/components/_entity_search.scss
+++ b/admin-dev/themes/new-theme/scss/components/_entity_search.scss
@@ -3,6 +3,29 @@ ul.entities-list {
 }
 
 .entity-search-widget {
+  .twitter-typeahead {
+    .tt-menu {
+      width: 100%;
+      max-height: 19.5rem;
+      padding: 0.3125rem 0;
+      overflow: auto;
+      background: $white;
+      border: 1px solid $gray-medium;
+    }
+
+    .tt-suggestion {
+      padding: 0.3125rem 0.625rem;
+      color: $gray-medium;
+      cursor: pointer;
+
+      &:hover,
+      &.tt-cursor {
+        color: $white;
+        background-color: $primary-hover;
+      }
+    }
+  }
+
   .entities-list {
     max-width: 100%;
     padding: 0;
@@ -16,6 +39,15 @@ ul.entities-list {
     }
 
     .entity-item {
+      &.disabled {
+        cursor: not-allowed;
+        background-color: #eceeef;
+
+        .material-icons {
+          cursor: not-allowed;
+        }
+      }
+
       // thumbnail
       > .media-left {
         img {
