--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1610,3 +1610,29 @@
     {% endfor -%}
   </div>
 {%- endblock -%}
+
+{% block searched_customer_row %}
+  {% set attr = attr|merge({'class': (attr.class|default('') ~ ' media entity-item')|trim}) %}
+  <li {{ block('widget_container_attributes') }}>
+    <div class="media-body media-middle">
+      {{ form_widget(form.fullname_and_email) }}
+      <i class="material-icons entity-item-delete">clear</i>
+    </div>
+    {{ form_widget(form.id_customer) }}
+  </li>
+{% endblock %}
+
+{#
+these widgets are the prototype templates (that are handled by js later) and they are rendered as disabled by default
+on page load because of disablingSwitch component behavior. But they must not be disabled
+or else will not be submitted to the form, so we remove "disabled" attribute if it exists.
+#}
+{% block searched_customer_id_customer_widget %}
+  {% set attr = attr|filter((value, key) => key != 'disabled') %}
+  {{ block('hidden_widget') }}
+{% endblock %}
+
+{% block searched_customer_fullname_and_email_widget %}
+  {% set attr = attr|filter((value, key) => key != 'disabled') %}
+  {{ block('text_preview_widget') }}
+{% endblock %}
