--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/CartRule/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/CartRule/Blocks/form.html.twig
@@ -22,6 +22,7 @@
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
+<div class="header-toolbar d-print-none">{{ multistoreHeader() }}</div>
 {{ form_start(cartRuleForm, {'attr': {
   'class': 'cart-rule-form',
 }}) }}
@@ -29,6 +30,17 @@
 {{ form_widget(cartRuleForm) }}
 
 {% block cart_rule_form_rest %}
-  {{ form_end(cartRuleForm) }}
+  {{ form_rest(cartRuleForm) }}
 {% endblock %}
+
+<div class="card-footer">
+  <a href="{{ path('admin_cart_rules_index') }}" class="btn btn-outline-secondary">
+    {{ 'Cancel'|trans({}, 'Admin.Actions') }}
+  </a>
+  <button class="btn btn-primary float-right">
+    {{ 'Save'|trans({}, 'Admin.Actions') }}
+  </button>
+</div>
+{{ form_end(cartRuleForm) }}
+
 
