--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/FormTheme/category.html.twig
@@ -1,1 +1,8 @@
 {% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
+
+{% block category_seo_preview_widget %}
+    <div id="serp-app" data-category-url="{{ category_url }}"></div>
+    <small class="form-text">
+      {{ 'Here is a preview of how your page will appear in search engine results.'|trans({}, 'Admin.Global') }}
+    </small>
+{% endblock category_seo_preview_widget %}
