--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/format_actions.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/format_actions.html.twig
@@ -33,7 +33,7 @@
         data-html="true">
     <a href="javascript:void(0)"
        data-confirmation-message="{{ confirmation }}"
-       data-default-layout="{{ addressFormat }}"
+       data-default-layout="{{ address_format }}"
        class="btn btn-outline-secondary modify-address-layout">
       {{ 'Use the last registered format'|trans({}, 'Admin.International.Feature') }}
     </a>
@@ -46,7 +46,7 @@
         data-html="true">
         <a href="javascript:void(0)"
            data-confirmation-message="{{ confirmation }}"
-           data-default-layout="{{ defaultFormat }}"
+           data-default-layout="{{ default_format }}"
            class="btn btn-outline-secondary modify-address-layout">
           {{ 'Use the default format'|trans({}, 'Admin.International.Feature') }}
         </a>
