fix gift product search input

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/entity_search_input.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/entity_search_input.html.twig
@@ -129,6 +129,8 @@
       <i class="material-icons entity-item-delete">clear</i>
     </div>
     {{ form_widget(form.id) }}
+    {# this allows rendering rest of the form inputs without alternating the theme #}
+    {{ form_rest(form) }}
   </li>
 {% endblock %}
 
