--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Theme/Blocks/Partials/theme_card_container.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Theme/Blocks/Partials/theme_card_container.html.twig
@@ -23,7 +23,7 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
 
-<div class="col-lg-3 col-md-4 col-sm-6 theme-card-container" data-test-name="{{ themeName }}">
+<div class="col-lg-3 col-md-4 col-sm-6 theme-card-container" data-role="{{ themeName }}">
   {% block content %}
   {% endblock %}
 </div>
