fix specific product and gift product selection

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/entity_search_input.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/entity_search_input.html.twig
@@ -156,3 +156,19 @@
   {% endif %}
   </tr>
 {%- endblock -%}
+
+
+{#
+these widgets are the prototype templates (that are handled by js later) and they are rendered as disabled by default
+on page load because of disablingSwitch component behavior. But they must not be disabled
+or else will not be submitted to the form, so we remove "disabled" attribute if it exists.
+#}
+{% block entity_item_id_widget %}
+  {% set attr = attr|filter((value, key) => key != 'disabled') %}
+  {{ block('hidden_widget') }}
+{% endblock %}
+
+{% block entity_item_name_widget %}
+  {% set attr = attr|filter((value, key) => key != 'disabled') %}
+  {{ block('text_preview_widget') }}
+{% endblock %}
