clean product-search-input and move customer/product search components to generic dir

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -1554,7 +1554,7 @@ $product-page-padding-bottom: 80px !default;
     max-width: 377px;
   }
 
-  .combination-reference {
+  .product-reference {
     margin-left: 0.5rem;
   }
 
