--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/combination.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/combination.html.twig
@@ -54,6 +54,7 @@
            'generator.open': 'Open combinations generator'|trans({}, 'Admin.Catalog.Feature'),
            'generator.success': 'Successfully generated {combinationsNb} combinations.'|trans({}, 'Admin.Catalog.Feature'),
            'generator.action': 'Generate combinations|Generate combination|Generate {combinationsNb} combinations'|trans({}, 'Admin.Catalog.Feature'),
+           'generator.select-all': 'Select all values ({valuesNb})'|trans({}, 'Admin.Catalog.Feature'),
            'search.placeholder': 'Search for attributes...'|trans({}, 'Admin.Catalog.Feature'),
            'modal.title': 'Generate combinations'|trans({}, 'Admin.Catalog.Feature'),
            'modal.close': 'Cancel'|trans({}, 'Admin.Actions'),
