--- a/mails/themes/modern/core/import.html.twig
+++ b/mails/themes/modern/core/import.html.twig
@@ -1,5 +1,5 @@
 {% extends '@MailThemes/modern/components/layout.html.twig' %}
-        
+
 {% block title %}{{ 'Import'|trans({}, 'Emails.Body', locale) }}{% endblock %}
 
 {% block content %}
@@ -120,7 +120,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="{{ align_left }}" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                          <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'The file {filename} has been successfully imported to your shop.'|trans({}, 'Emails.Body', locale)|raw }}</div>
+                                          <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'The file {filename} has been successfully imported to your store.'|trans({}, 'Emails.Body', locale)|raw }}</div>
                                         </td>
                                       </tr>
                                     </tbody>
@@ -138,7 +138,7 @@
               </div>
               <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
               <!-- MESSAGE BOX ENDING -->
-              
+
 
 {% endblock %}
 
