--- a/src/PrestaShopBundle/Resources/views/Admin/Multistore/header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Multistore/header.html.twig
@@ -78,7 +78,7 @@
                     <span class="multishop-modal-color" style="background-color:#25b9d7;"></span>
                   {% endif %}
                   <a class="multishop-modal-all-name" href="{{ multistore_url() }}">
-                    <span>{{ "All shops"|trans({}, 'Admin.Global') }}</span>
+                    <span>{{ "All stores"|trans({}, 'Admin.Global') }}</span>
                   </a>
                 </li>
                 {% endblock %}
