--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/catalog_price_rules.html.twig
@@ -40,7 +40,7 @@
           <th>{{ 'Currency'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
-          <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
+          <th>{{ 'Store'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'Discount'|trans({}, 'Admin.Catalog.Feature') }}</th>
           <th>{{ 'Units'|trans({}, 'Admin.Global') }}</th>
           <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
