--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig
@@ -1284,7 +1284,7 @@
 {% block unavailable_widget %}
   <div class="alert alert-unavailable" role="alert">
     <p class="alert-text">
-      {{ 'Not available yet'|trans({}, 'Admin.Catalog.Feature') }}
+      {{ 'Not available yet.'|trans({}, 'Admin.Catalog.Feature') }}
     </p>
   </div>
 {% endblock %}
