--- a/mails/themes/modern/core/account.html.twig
+++ b/mails/themes/modern/core/account.html.twig
@@ -1,5 +1,5 @@
 {% extends '@MailThemes/modern/components/layout.html.twig' %}
-        
+
 {% block title %}{{ 'Account'|trans({}, 'Emails.Body', locale) }}{% endblock %}
 
 {% block content %}
@@ -248,7 +248,7 @@
                             <tbody>
                               <tr>
                                 <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                  <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:center;color:#363A41;">{{ 'You can now place orders on our shop:'|trans({}, 'Emails.Body', locale)|raw }} <a href="{shop_url}" target="_blank" style="text-decoration:none;color:#25B9D7; display:block">{shop_name}</a></div>
+                                  <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:center;color:#363A41;">{{ 'You can now place orders on our store:'|trans({}, 'Emails.Body', locale)|raw }} <a href="{shop_url}" target="_blank" style="text-decoration:none;color:#25B9D7; display:block">{shop_name}</a></div>
                                 </td>
                               </tr>
                             </tbody>
@@ -262,7 +262,7 @@
               </div>
               <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
               <!-- CENTER TEXT ENDING -->
-              
+
 
 {% endblock %}
 
