--- a/mails/themes/modern/core/credit_slip.html.twig
+++ b/mails/themes/modern/core/credit_slip.html.twig
@@ -1,5 +1,5 @@
 {% extends '@MailThemes/modern/components/layout.html.twig' %}
-        
+
 {% block title %}{{ 'Credit Slip'|trans({}, 'Emails.Body', locale) }}{% endblock %}
 
 {% block content %}
@@ -151,7 +151,7 @@
                             <tbody>
                               <tr>
                                 <td align="{{ align_left }}" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                  <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'Review this credit slip and download your invoice on our shop, go to the <a href="{history_url}" target="_blank">%credit_slips_label%</a> section of your customer account.'|trans({'%credit_slips_label%': 'Credit slips'|trans({}, 'Shop.Theme.Customeraccount', locale)}, 'Emails.Body', locale)|raw }}</div>
+                                  <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'Review this credit slip and download your invoice on our store, go to the <a href="{history_url}" target="_blank">%credit_slips_label%</a> section of your customer account.'|trans({'%credit_slips_label%': 'Credit slips'|trans({}, 'Shop.Theme.Customeraccount', locale)}, 'Emails.Body', locale)|raw }}</div>
                                 </td>
                               </tr>
                             </tbody>
@@ -165,7 +165,7 @@
               </div>
               <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
               <!-- FIRST TEXT ENDING -->
-              
+
 
 {% endblock %}
 
