--- a/mails/themes/modern/modules/followup/followup_4.html.twig
+++ b/mails/themes/modern/modules/followup/followup_4.html.twig
@@ -1,5 +1,5 @@
 {% extends '@MailThemes/modern/components/layout.html.twig' %}
-        
+
 {% block title %}{{ 'Follow up 4'|trans({}, 'Emails.Body', locale) }}{% endblock %}
 
 {% block content %}
@@ -125,7 +125,7 @@
                                       </tr>
                                       <tr>
                                         <td align="{{ align_left }}" style="font-size:0px;padding:10px 25px;padding-top:0px;word-break:break-word;">
-                                          <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'Your cart has been saved, you can resume your order by visiting our shop:'|trans({}, 'Emails.Body', locale)|raw }} <a href="{shop_url}" target="_blank">{shop_url}</a></div>
+                                          <div style="font-family:Open sans, arial, sans-serif;font-size:14px;line-height:25px;text-align:{{ align_left }};color:#363A41;">{{ 'Your cart has been saved, you can resume your order by visiting our store:'|trans({}, 'Emails.Body', locale)|raw }} <a href="{shop_url}" target="_blank">{shop_url}</a></div>
                                         </td>
                                       </tr>
                                       <tr>
@@ -188,7 +188,7 @@
               </div>
               <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
               <!-- MESSAGE BOX ENDING -->
-              
+
 
 {% endblock %}
 
