code review fixes

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/list_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/Block/list_header.html.twig
@@ -25,7 +25,7 @@
 
 <div class="">
   <div id="customer_thread_contacts" class="d-flex justify-content-around row">
-    {% for serviceSummary in servicesSummary.summaries %}
+    {% for serviceSummary in servicesSummary.contacts %}
 
       <div class="col-lg-3">
         <div class="card">
