extend prestashop_ui_kit and remove some columns

--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/format_actions.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/format_actions.html.twig
@@ -24,7 +24,7 @@
  *#}
 
 {% set confirmation = 'Are you sure you want to restore the default address format for this country?'|trans({},'Admin.International.Notification') %}
-<div class="col-8 address-format-actions">
+<div class="address-format-actions">
   <span title=""
         class="label-tooltip"
         data-toggle="pstooltip"
