--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/FormTheme/country.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/FormTheme/country.html.twig
@@ -22,18 +22,15 @@
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
-{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig' %}
+{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
-{% block _country_address_format_widget %}
+{% block address_format_widget %}
   <div class="form-group row">
-    <label class="form-control-label col-lg-4">
-      {{ 'Address format'|trans({}, 'Admin.International.Feature') }}
-    </label>
-    <div class="col-lg-8">
+    <div class="col">
       <div class="form-group row">
         <div class="col-lg-4">
-          {{ form_widget(form, {'attr': {'style': 'min-height: 200px'}}) }}
           {{ form_errors(form) }}
+          {{ form_widget(form, {'attr': {'style': 'min-height: 200px'}}) }}
         </div>
         <div class="col-lg-8">
           <ul class="nav nav-pills address-format-tabs" id="custom-address-fields">
@@ -48,7 +45,7 @@
               </li>
             {% endfor %}
           </ul>
-          <div class="tab-content address-format-tabs-content" >
+          <div class="tab-content address-format-tabs-content">
             {% for key, rows in available_fields %}
               <div class="tab-pane availableFieldsList panel {% if loop.index == 1 %} active {% endif %}" id="availableListFieldsFor_{{ key }}">
                 {% for row in rows %}
@@ -68,7 +65,5 @@
       </div>
     </div>
   </div>
-  <div class="form-group row justify-content-end">
-    {% include '@PrestaShop/Admin/Improve/International/Country/Blocks/format_actions.html.twig' with {'address_format': address_format, 'default_format': default_format} %}
-  </div>
+  {% include '@PrestaShop/Admin/Improve/International/Country/Blocks/format_actions.html.twig' with {'address_format': address_format, 'default_format': default_format} %}
 {% endblock %}
