--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/CartRule/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/CartRule/Blocks/form.html.twig
@@ -22,17 +22,19 @@
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
-<div class="header-toolbar d-print-none">{{ multistoreHeader() }}</div>
-{{ form_start(cartRuleForm, {'attr': {
-  'class': 'cart-rule-form',
-}}) }}
-
-{{ form_widget(cartRuleForm) }}
-
-{% block cart_rule_form_rest %}
-  {{ form_rest(cartRuleForm) }}
-{% endblock %}
-
+{{ form_start(cartRuleForm) }}
+{{ form_errors(cartRuleForm) }}
+<div class="card">
+  <h3 class="card-header">
+    {{ 'Cart rule'|trans({}, 'Admin.Catalog.Feature') }}
+  </h3>
+  <div class="card-body">
+    {{ form_widget(cartRuleForm) }}
+    {% block cart_rule_form_rest %}
+      {{ form_rest(cartRuleForm) }}
+    {% endblock %}
+  </div>
+</div>
 <div class="card-footer">
   <a href="{{ path('admin_cart_rules_index') }}" class="btn btn-outline-secondary">
     {{ 'Cancel'|trans({}, 'Admin.Actions') }}
